<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.6.RELEASE</version>
		<relativePath></relativePath> <!-- lookup parent from repository -->
	</parent>
	<groupId>to3.eu.bunny</groupId>
	<artifactId>to3-spring-bunny</artifactId>
	<version>0.0.7-SNAPSHOT</version>
	<name>to3-spring-bunny</name>
	<description>Library to enable Spring Amqp with RabbitMQ</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<java.version>1.8</java.version>
		<!-- Maximum size of permanent generation heap (-XX:MaxPermSize) is 256m -->
		<max.perm>256m</max.perm>
		<!-- Initial java heap size (-Xms) is 128m -->
		<initial.heap>128m</initial.heap>
		<!-- Maximum java heap size (-Xmx) is 1024m -->
		<max.heap>1g</max.heap>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>4.3.7.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test</artifactId>
			<version>1.5.2.RELEASE</version>
		</dependency>
	</dependencies>



	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>${skipTests}</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>deploy</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>deploy</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<executions>
					<execution>
						<id>deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<additionalOptions>
						<additionalOption>-Xdoclint:none</additionalOption>
					</additionalOptions>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<!-- Placeholders that are found from the files located in the configured 
				resource directories are replaced with the property values found from the 
				profile specific configuration file. -->
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<filtering>true</filtering>
				<directory>src/test/resources</directory>
			</resource>
		</resources>

	</build>


	<profiles>
		<profile>
			<id>dev</id>
			<!-- The development profile is active by default -->
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<mq.topic.exchange.name>to3-upload-dev-exchange</mq.topic.exchange.name>
				<mq.queue.name>to3-upload-dev</mq.queue.name>
				<mq.route.key>to3-upload-dev</mq.route.key>
				<skipTests>true</skipTests>
			</properties>
		</profile>
		<profile>
			<id>integ</id>
			<properties>
				<mq.topic.exchange.name>to3-upload-dev-exchange</mq.topic.exchange.name>
				<mq.queue.name>to3-upload-dev</mq.queue.name>
				<mq.route.key>to3-upload-dev</mq.route.key>
				<skipTests>false</skipTests>
			</properties>

		</profile>
		<profile>
			<id>release</id>
			<properties>
				<mq.topic.exchange.name>to3-upload-dev-exchange</mq.topic.exchange.name>
				<mq.queue.name>to3-upload-dev</mq.queue.name>
				<mq.route.key>to3-upload-dev</mq.route.key>
				<skipTests>false</skipTests>
			</properties>
		</profile>

	</profiles>


</project>

